fix index display

--- a/index.html
+++ b/index.html
@@ -1,6 +1,4 @@
-<?php
-$sToken = md5(session_id() . $_SERVER['REMOTE_ADDR']);
-?><!Doctype html>
+<!Doctype html>
 <html lang="zh-Hant-TW">
 <head>
 <meta charset="UTF-8">
