--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyBRKqsD1Nl2ULa7y2f5w9zCrc-Idl3VNwI&sensor=false&libraries=places"></script>
-<script type="text/javascript" src="/js/gmap.js"></script>
+<script type="text/javascript" src="js/gmap.js"></script>
 </head>
 <body class="index">
     <div class="container">
