[add]display info

--- a/event.html
+++ b/event.html
@@ -15,6 +15,9 @@
 <body class="index">
     <div class="container">
         <div class="row">
+            <div class="alert alert-success text-center displayInfo" role="alert">
+                <span class="glyphicon glyphicon-info-sign">
+            </div>
             <div class="place-list col-md-3">
                 <ul class="list-group">
                     <!--container  -->
