[add]on position change event

--- a/eventBall.html
+++ b/eventBall.html
@@ -22,7 +22,7 @@
                 <span class="glyphicon glyphicon-info-sign">
             </div>
             <div class="place-list col-md-3">
-                <ul class="list-group">
+                <ul class="list-group" style="display:none">
                     <!--container  -->
                 </ul>
             </div>
